Apply suggestions from code review
Fix an -> and

Co-authored-by: Chris Needham <chrisn@users.noreply.github.com>

--- a/index.src.html
+++ b/index.src.html
@@ -4402,7 +4402,7 @@ is its own [=equivalent opaque format=].
     This format is composed of three distinct planes, one plane of Luma and two
     planes of Chroma, denoted Y, U and V, and present in this order.
 
-    The U an V planes are [=sub-sampled=] horizontally and vertically by a
+    The U and V planes are [=sub-sampled=] horizontally and vertically by a
     [=factor=] of 2 compared to the Y plane.
 
     Each sample in this format is 10 bits, encoded as a 16-bit integer in
@@ -4427,7 +4427,7 @@ is its own [=equivalent opaque format=].
     This format is composed of three distinct planes, one plane of Luma and two
     planes of Chroma, denoted Y, U and V, and present in this order.
 
-    The U an V planes are [=sub-sampled=] horizontally and vertically by a
+    The U and V planes are [=sub-sampled=] horizontally and vertically by a
     [=factor=] of 2 compared to the Y plane.
 
     Each sample in this format is 12 bits, encoded as a 16-bit integer in
@@ -4482,7 +4482,7 @@ is its own [=equivalent opaque format=].
     planes of Chroma, denoted Y, U and V, and one plane of Alpha values, all
     present in this order.
 
-    The U an V planes are [=sub-sampled=] horizontally and vertically by a
+    The U and V planes are [=sub-sampled=] horizontally and vertically by a
     [=factor=] of 2 compared to the Y and Alpha planes.
 
     Each sample in this format is 10 bits, encoded as a 16-bit integer in
@@ -4510,7 +4510,7 @@ is its own [=equivalent opaque format=].
     planes of Chroma, denoted Y, U and V, and one plane of Alpha values, all
     present in this order.
 
-    The U an V planes are [=sub-sampled=] horizontally and vertically by a
+    The U and V planes are [=sub-sampled=] horizontally and vertically by a
     [=factor=] of 2 compared to the Y and Alpha planes.
 
     Each sample in this format is 12 bits, encoded as a 16-bit integer in
@@ -4562,7 +4562,7 @@ is its own [=equivalent opaque format=].
     This format is composed of three distinct planes, one plane of Luma and two
     planes of Chroma, denoted Y, U and V, and present in this order.
 
-    The U an V planes are [=sub-sampled=] horizontally by a [=factor=] of 2
+    The U and V planes are [=sub-sampled=] horizontally by a [=factor=] of 2
     compared to the Y plane, and not [=sub-sampled=] vertically.
 
     Each sample in this format is 10 bits, encoded as a 16-bit integer in
@@ -4586,7 +4586,7 @@ is its own [=equivalent opaque format=].
     This format is composed of three distinct planes, one plane of Luma and two
     planes of Chroma, denoted Y, U and V, and present in this order.
 
-    The U an V planes are [=sub-sampled=] horizontally by a [=factor=] of 2
+    The U and V planes are [=sub-sampled=] horizontally by a [=factor=] of 2
     compared to the Y plane, and not [=sub-sampled=] vertically.
 
     Each sample in this format is 12 bits, encoded as a 16-bit integer in
@@ -4612,7 +4612,7 @@ is its own [=equivalent opaque format=].
     present in this order. It is also often refered to as Planar YUV 4:2:2 with
     an alpha channel.
 
-    The U an V planes are [=sub-sampled=] horizontally by a [=factor=] of 2
+    The U and V planes are [=sub-sampled=] horizontally by a [=factor=] of 2
     compared to the Y and Alpha planes, and not [=sub-sampled=] vertically.
 
     Each sample in this format is 8 bits.
@@ -4639,7 +4639,7 @@ is its own [=equivalent opaque format=].
     planes of Chroma, denoted Y, U and V, and one plane of Alpha values, all
     present in this order.
 
-    The U an V planes are [=sub-sampled=] horizontally by a [=factor=] of 2
+    The U and V planes are [=sub-sampled=] horizontally by a [=factor=] of 2
     compared to the Y and Alpha planes, and not [=sub-sampled=] vertically.
 
     Each sample in this format is 10 bits, encoded as a 16-bit integer in
@@ -4666,7 +4666,7 @@ is its own [=equivalent opaque format=].
     planes of Chroma, denoted Y, U and V, and one plane of Alpha values, all
     present in this order.
 
-    The U an V planes are [=sub-sampled=] horizontally by a [=factor=] of 2
+    The U and V planes are [=sub-sampled=] horizontally by a [=factor=] of 2
     compared to the Y and Alpha planes, and not [=sub-sampled=] vertically.
 
     Each sample in this format is 12 bits, encoded as a 16-bit integer in
