Video pixel format integers are unsigned

--- a/index.src.html
+++ b/index.src.html
@@ -4370,6 +4370,8 @@ If a {{VideoPixelFormat}} has an alpha component, the format's
 alpha component. If a {{VideoPixelFormat}} does not have an alpha component, it
 is its own [=equivalent opaque format=].
 
+Integer values are unsigned unless otherwise specified.
+
 <dl>
   <dt><dfn enum-value for=VideoPixelFormat>I420</dfn></dt>
   <dd>
