In the VideoFrame buffer constructor, init.layout, not options.layout
This is presumably just a typo from copying from copyTo.

--- a/index.src.html
+++ b/index.src.html
@@ -3530,7 +3530,7 @@ dictionary VideoFrameMetadata {
         |init|.{{VideoFrameBufferInit/format}}.
 6. If |parsedRect| is an exception, return |parsedRect|.
 7. Let |optLayout| be `undefined`.
-8. If |options|.{{VideoFrameBufferInit/layout}} [=map/exists=], assign its value
+8. If |init|.{{VideoFrameBufferInit/layout}} [=map/exists=], assign its value
     to |optLayout|.
 9. Let |combinedLayout| be the result of running the [=VideoFrame/Compute
     Layout and Allocation Size=] algorithm with |parsedRect|,
