Avoid non-normative uses of "may"

--- a/index.src.html
+++ b/index.src.html
@@ -2603,9 +2603,9 @@ enum EncodedAudioChunkType {
         to the {{EncodedAudioChunk}} internal slot in |value| with the same name
         as the named field.
 
-NOTE: <span class=allow-2119>Since {{EncodedAudioChunk}}s are immutable, User
-    Agents may choose to implement serialization using a reference counting
-    model similar to [[#audiodata-transfer-serialization]].</span>
+NOTE: Since {{EncodedAudioChunk}}s are immutable, User
+    Agents can choose to implement serialization using a reference counting
+    model similar to [[#audiodata-transfer-serialization]].
 
 EncodedVideoChunk Interface{#encodedvideochunk-interface}
 -----------------------------------------------------------
@@ -2711,9 +2711,9 @@ enum EncodedVideoChunkType {
         to the {{EncodedVideoChunk}} internal slot in |value| with the same name
         as the named field.
 
-NOTE: <span class=allow-2119>Since {{EncodedVideoChunk}}s are immutable, User
-    Agents may choose to implement serialization using a reference counting
-    model similar to [[#videoframe-transfer-serialization]].</span>
+NOTE: Since {{EncodedVideoChunk}}s are immutable, User
+    Agents can choose to implement serialization using a reference counting
+    model similar to [[#videoframe-transfer-serialization]].
 
 
 Raw Media Interfaces {#raw-media-interfaces}
