Fix a typo in Compute Layout and Allocation Size algorithm

--- a/index.src.html
+++ b/index.src.html
@@ -4118,7 +4118,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
             multiplied by |sampleBytes|.
         9. Set |computedLayout|'s [=computed plane layout/sourceWidthBytes=] to
             the result of the integer division of
-            truncated |parsedRect|.{{DOMRectInit/width}} by |sampleHeight|,
+            truncated |parsedRect|.{{DOMRectInit/width}} by |sampleWidth|,
             multiplied by |sampleBytes|.
         10. If |layout| is not `undefined`:
             1. Let |planeLayout| be the {{PlaneLayout}} in |layout| at position
