--- a/opus_codec_registration.src.html
+++ b/opus_codec_registration.src.html
@@ -226,7 +226,7 @@ enum OpusSignal {
 </pre>
 
 The {{OpusSignal}} describes the type of audio signal being encoded. See
-[secion 9.3.1.1](https://draft.ortc.org/#opus-codec-options*) of [[OBJECT-RTC]].
+[section 9.3.1.1](https://draft.ortc.org/#opus-codec-options*) of [[OBJECT-RTC]].
 
 <dl>
   <dt><dfn enum-value for=OpusSignal>auto</dfn></dt>
@@ -256,7 +256,7 @@ enum OpusApplication {
 </pre>
 
 The {{OpusApplication}} describes the intended application. See
-[secion 9.3.1.1](https://draft.ortc.org/#opus-codec-options*) of [[OBJECT-RTC]].
+[section 9.3.1.1](https://draft.ortc.org/#opus-codec-options*) of [[OBJECT-RTC]].
 
 <dl>
   <dt><dfn enum-value for=OpusApplication>voip</dfn></dt>
