Remove references to Object RTC draft

--- a/opus_codec_registration.src.html
+++ b/opus_codec_registration.src.html
@@ -46,12 +46,6 @@ Markup Shorthands:css no, markdown yes, dfn yes
     "title": "RFC 7845: Ogg Encapsulation for the Opus Audio Codec",
     "publisher": "IETF",
     "date": "April 2016"
-  },
-  "OBJECT-RTC": {
-    "href": "https://w3c.github.io/ortc/",
-    "title": "Object RTC (ORTC) API for WebRTC",
-    "publisher": "W3C",
-    "date": "January 2021"
   }
 }
 </pre>
@@ -225,13 +219,12 @@ enum OpusSignal {
 </xmp>
 </pre>
 
-The {{OpusSignal}} describes the type of audio signal being encoded. See
-[section 9.3.1.1](https://draft.ortc.org/#opus-codec-options*) of [[OBJECT-RTC]].
+The {{OpusSignal}} indicates the default value for the type of signal being encoded.
 
 <dl>
   <dt><dfn enum-value for=OpusSignal>auto</dfn></dt>
   <dd>
-    The audio signal is not known to be of a particular type.
+    The audio signal is not specified to be of a particular type.
   </dd>
   <dt><dfn enum-value for=OpusSignal>music</dfn></dt>
   <dd>
@@ -255,8 +248,8 @@ enum OpusApplication {
 </xmp>
 </pre>
 
-The {{OpusApplication}} describes the intended application. See
-[section 9.3.1.1](https://draft.ortc.org/#opus-codec-options*) of [[OBJECT-RTC]].
+The {{OpusApplication}} indicates the default value for the encoder's intended
+application.
 
 <dl>
   <dt><dfn enum-value for=OpusApplication>voip</dfn></dt>
